<resources>
    <string name="app_name">দৈনিক মুসলিম</string>
    <string name="userguide_userGuideBismillah">*** পরম করুণাময় ও অসীম দয়ালু মহান আল্লাহ্‌ সুব্‌হানা ওয়া তাআলার নামে শুরু করছি। ***</string>
    <string name="userguide_userGuideDetails">\'আমি আজ সারাদিনটাকে কিভাবে ব্যয় করলাম?\' প্রতি রাতে ঘুমাতে যাওয়ার আগে আপনি যদি নিজেই নিজেকে এরকম প্রশ্ন করেন এবং নিজেই উত্তর দেওয়ার চেষ্টা করেন, তাহলে আপনি বুঝতে পারবেন যে আপনি কি ভুল করেছেন, কি করলে ভালো হত, কি করতে হবে, কোনটা ভালো করেছেন, কোনটা আরো ভালো করা যেতে পারে ইত্যাদি। মূলত, এভাবে নিজেকে নিজেই প্রশ্ন করা এবং নিজেই উত্তর দেওয়ার মাধ্যমে নিজেকে ধীরে ধীরে পরিবর্তন করার লক্ষ্য নিয়েই এই অ্যাপলিকেশনটি।\n\nপ্রতিরাতে ঘুমের আগে \'প্রশ্ন - উত্তর শুরু করুন\' বাটনে ক্লিক করে নিজেকে প্রশ্ন করা শুরু করবেন এবং \'হ্যা\' ও \'না\' বাটনে ক্লিক করে উত্তর দিন। প্রশ্নের তালিকা থেকে প্রতিদিন বাদ পরে যাওয়া কাজগুলো পূর্ণ করার চেষ্টা করুন, অন্যকথায়, স্কোর বৃদ্ধি করার চেষ্টা করুন। এইভাবে নিওম মেনে প্রতিদিন চলতে থাকলে আপনার উন্নতি আপনি নিজেই বুঝতে পারবেন।\n\nআল্লাহ্‌ সুব্‌হানা ওয়া তাআলা আমাদের সবাইকে কোর্‌আন ও সুন্নাহ্‌ মোতাবেক চলার তাওফীক দান করুন। আমীন।</string>
    <string name="main_userGuideButtonText">কি, কেন এবং কিভাবে ব্যবহার করবেন?</string>
    <string name="main_developButtonText">আপনার অগ্রগতি দেখুন</string>
    <string name="main_startQuesAnsText">প্রশ্ন - উত্তর শুরু করুন</string>
    <string name="dev_Data">তারিখঃ</string>
    <string name="dev_highestScoreText">সর্বোচ্চ স্কোরঃ</string>
    <string name="dev_firstScoreText">শুরুর দিনের স্কোরঃ</string>
    <string name="dev_backHomeText">প্রথম পাতায় ফিরে যান</string>
    <string name="dev_PrayText">মহান আল্লাহ্‌ সুব্‌হানা ওয়া তাআলা আমাকে, আপনাকে, সবাইকে ইসলামের আলোয় উজ্জীবিত হয়ে সুন্দর ও সফল জীবনযাপন করার তাওফীক দান করুন। আমীন। ছুম্মামীন।</string>
    <string name="quesans_initQuesText">আজ কি আমি ফয্‌র এর নামায পড়েছি?</string>
    <string-array name="questionArrayPart1">
        <item>আজ আমি সমস্ত কাজ কি আল্লাহ্‌ তাআলার নামে (বিস্‌মিল্লাহ্‌ বলে) শুরু করেছি?</item>
        <item>আজ কি ন্যূনতম একবারও \’আল-হামদু-লিল্লাহ্‌\’ (সমস্ত প্রশংসা একমাত্র আল্লাহ্‌ এর জন্য) পড়েছি?</item>
        <item>আজ কি আমি ফয্‌র এর নামায পড়েছি?</item>
        <item>আজ কি আমি যোহ্‌র এর নামায পড়েছি?</item>
        <item>আজ কি আমি আছ্‌র এর নামায পড়েছি?</item>
        <item>আজ কি আমি মাগ্‌রিব এর নামায পড়েছি?</item>
        <item>আজ কি আমি এশা এর নামায পড়েছি?</item>
        <item>আজ কি কোর-আন, হাদীস অথবা ইসলামিক জ্ঞান সমৃদ্ধ গ্রন্থ পাঠ অথবা, শ্রবণ করেছি?</item>
        <item>এমন কোনো ভাই/বোনের সাথে দেখা হয়েছে যাকে আমি নামাজের  দাওয়াত(নামাজ প্রতিষ্ঠা)/ইসলামের দাওয়াত দিতে পারি?</item>
        <item>আজ কি মিথ্যা বলা থেকে বিরত থাকতে পেরেছি?</item>
        <item>আজ কি অপ্রয়োজনীয়/অশ্লীল কথা বলা থেকে বিরত থাকতে পেরেছি?</item>
        <item>আজ কি পরনিন্দা/গীবত করা থেকে বিরত থাকতে পেরেছি?</item>
        <item>আজ কি ইচ্ছাকৃত বা অনিচ্ছাকৃতভাবে কোনো ভুল/গোনাহের কাজ করে ফেলেছি?</item>
        <item>আজ কি কোনো ছোট/বড় সমস্যায়/বিপদে পরেছিলাম?</item>
        <item>আমি কি আজ হালাল খাবার খেয়েছি (আমি জানি হালাল খাবার গ্রহন এবাদাত কবুলের পূর্ব শর্ত)?</item>
        <item>আজ কি আমার পরিধেয় পোশাক এবাদাতের যোগ্য, ইসলামে বৈধ ছিলো?</item>
        <item>আজ কি শালীন হয়ে/ পর্দা মেনে চলতে পেরেছি, আমার পোশাক/চলাফেরা/কথাবার্তা শালীন ছিল?</item>
        <item>আজ কি মা-বাবার সাথে কথা/দেখা/সাক্ষাত/যোগাযোগ হয়েছে?</item>
        <item>আজ কি কোনো অসহায়/দুঃখী মানুষের সাথে দেখা হয়েছে?</item>
        <item>আমি কি নিশ্চত যে আজ আমার আচরনে কেউ কষ্ট পায়নি এবং আজ আমি সবার সাথে ভালো ব্যবহার করেছি?</item>
        <item>আজ কি দেখা/সাক্ষাত হওয়া ভাইয়ের সাথে সালাম বিনিময় করেছি (মুসলিম ভাইয়ের জন্য দোয়া)?</item>
        <item>আমি কি আমার সৃষ্টিকর্তা,পালনকর্তা, রিযিকদাতা যিনি সবকিছুর মালিক, চিরঞ্জিব, চিরস্থায়ী, সকল জ্ঞানের আধার, অদ্বিতীয়, অতুলনীয়, পরমকরুনাময়, অসীম দয়ালু, সর্বশক্তিমান আল্লাহকে স্বরন করেছি এবং কৃতজ্ঞতা প্রকাশ করেছি?</item>
        <item>আমি কি উপলব্ধি করতে পারছি যে, আরো একটি দিন আমি আমার জীবন থেকে ব্যয় করে ফেল্‌লাম?</item>
    </string-array>
    <string-array name="questionArrayPart2">
        <item>হ্যা পড়েছি।\nফয্‌র এর নামাজ কি জামায়াতের সহিত পড়তে পেরেছি?</item>
        <item>হ্যা পড়েছি।\nযোহ্‌র এর নামাজ কি জামায়াতের সহিত পড়তে পেরেছি?</item>
        <item>হ্যা পড়েছি।\nআছ্‌র এর নামাজ কি জামায়াতের সহিত পড়তে পেরেছি?</item>
        <item>হ্যা পড়েছি।\nমাগ্‌রিব এর নামাজ কি জামায়াতের সহিত পড়তে পেরেছি?</item>
        <item>হ্যা পড়েছি।\nএশা এর নামাজ কি জামায়াতের সহিত পড়তে পেরেছি?</item>
        <item>হ্যা হয়েছে।\nতাহলে, আমি কি তার কাছে দাওয়াত পৌছতে পেরেছি?</item>
        <item>হ্যা (আল্লাহ্‌ আমাকে ক্ষমা করুন)।\nতখন, আমি কি সাথে সাথে আল্লাহ্‌ তাআলার কাছে ক্ষমা প্রার্থনা করেছি?</item>
        <item>হ্যা।\nতখন ঐ অবস্থায় আল্লাহর কাছে সাহায্য চেয়েছি এবং ধৈর্য্য ধারণ করেছি?</item>
        <item>হ্যা।\nআমি কি তাদের সাথে ভালো ব্যাবহার করতে পেরেছি অথবা ভালোভাবে কথা বলেছি? তাদের সেবা করতে পেরেছি অথবা কাজে সাহায্য করতে পেরেছি?</item>
        <item>হ্যা হয়েছে।\nঅসহায় মানুষটাকে কোনোভাবে সান্তনা/সাহায্য/দোয়া করতে পেরেছি?</item>
    </string-array>
</resources>
