<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.imtilab.dailymuslim.UserGuide"
    android:background="@color/localBackground">

    <ScrollView
        android:id="@+id/userguide_sv1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">
        <RelativeLayout
            android:id="@+id/userguide_RL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">
            <TextView
                android:id="@+id/userguide_tv1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/userguide_userGuideBismillah"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:paddingBottom="20dp"/>
            <TextView
                android:id="@+id/userguide_tv2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/userguide_tv1"
                android:text="@string/userguide_userGuideDetails"
                android:textSize="16sp"
                android:lineSpacingExtra="2sp"
                android:paddingBottom="5dp"/>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/userguide_b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_startQuesAnsText"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/customstyle_button_background"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:onClick="clicked_userguide_b1"/>
</RelativeLayout>
