<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/localBackground">

    <ImageView
        android:id="@+id/main_iv1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/img2"
        android:scaleType="fitXY"
        android:layout_weight="2"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/main_b1"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:text="@string/main_startQuesAnsText"
        android:textSize="18sp"
        android:background="@drawable/customstyle_button_background"
        android:textColor="@color/white"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:layout_weight="3"
        android:onClick="clicked_main_b1"/>
    <Button
        android:id="@+id/main_b2"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:text="@string/main_developButtonText"
        android:textSize="18sp"
        android:background="@drawable/customstyle_button_background"
        android:textColor="@color/white"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:layout_weight="3"
        android:onClick="clicked_main_b2"/>
    <Button
        android:id="@+id/main_b3"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:text="@string/main_userGuideButtonText"
        android:textSize="18sp"
        android:background="@drawable/customstyle_button_background"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:layout_weight="3"
        android:onClick="clicked_main_b3"/>
</LinearLayout>
