<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.github.imtilab.dailymuslim.Development"
    android:background="@color/localBackground"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LL1"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/customstyle1"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/LL21"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/dev_tv21"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dev_highestScoreText"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingRight="4dp"/>
            <TextView
                android:id="@+id/dev_tv22"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text=""
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LL31"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="7.5dp">
            <TextView
                android:id="@+id/dev_tv31"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dev_Data"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingRight="4dp"/>
            <TextView
                android:id="@+id/dev_tv32"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>
        </LinearLayout>
        <View
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary200"/>
        <LinearLayout
            android:id="@+id/LL41"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="7.5dp">
            <TextView
                android:id="@+id/dev_tv41"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dev_firstScoreText"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingRight="4dp"/>
            <TextView
                android:id="@+id/dev_tv42"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text=""
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LL51"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/dev_tv51"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dev_Data"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingRight="4dp"/>
            <TextView
                android:id="@+id/dev_tv52"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/RL1"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/dev_tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_PrayText"
            android:textSize="16sp"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"/>

        <Button
            android:id="@+id/dev_b1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/dev_backHomeText"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/customstyle_button_background"
            android:padding="5dp"
            android:layout_alignParentBottom="true"
            android:onClick="clicked_dev_b1"/>
    </RelativeLayout>

</LinearLayout>